# linux-whispr

./: .gitignore  LICENSE  PROMPT_NOVA_THREAD.md  README.md  pyproject.toml
.specify/memory/: constitution.md
data/: linux-whispr.desktop
packaging/systemd/: linux-whispr.service
specs/001-linux-whispr/: scenarios.md  spec.md  technical-context.md
specs/002-web-dashboard/: spec.md
src/linux_whispr/: __init__.py  __main__.py  app.py  config.py  constants.py  events.py
src/linux_whispr/ai/: anthropic_llm.py  base.py  command.py  groq_llm.py  local_llm.py  openai_llm.py  refinement.py
src/linux_whispr/ai/prompts/: command.py  refinement.py
src/linux_whispr/audio/: capture.py  devices.py  vad.py
src/linux_whispr/features/: adaptive.py  dictionary.py  history.py  snippets.py
src/linux_whispr/input/: hotkey.py  pynput_hotkey.py  wayland_hotkey.py  x11_hotkey.py
src/linux_whispr/output/: clipboard.py  injector.py  wtype.py  xdotool.py  ydotool.py
src/linux_whispr/platform/: autostart.py  detect.py  notifications.py
src/linux_whispr/stt/: base.py  faster_whisper.py  groq_api.py  model_manager.py  openai_api.py
src/linux_whispr/ui/: overlay.py  settings.py  tray.py  wizard.py
src/linux_whispr/web/: __init__.py  server.py
src/linux_whispr/web/api/: config_routes.py  dictionary_routes.py  history_routes.py  models_routes.py  snippets_routes.py  status_routes.py
src/linux_whispr/web/static/: index.html
tests/: conftest.py  test_adaptive.py  test_ai_refinement.py  test_audio_capture.py  test_command_processor.py  test_config.py  test_dictionary.py  test_events.py  test_history.py  test_hotkey.py  test_integration.py  test_platform_detect.py  test_snippets.py  test_stt_backends.py  test_text_injector.py  test_vad.py
